crates/zeo/tests/checks/snapshots/checks__clif__clif_snapshot_hello.snap
---
source: crates/zeo/tests/checks/clif.rs
expression: "clif_of(\"puts \\\"Hello, world!\\\"\\n\")"
---
;; zeo_toplevel
function u0:0(i64) -> i32 ccall {
    ss0 = explicit_slot 24, align = 8
    ss1 = explicit_slot 0, align = 8
    ss2 = explicit_slot 8, align = 8
    ss3 = explicit_slot 24, align = 8
    ss4 = explicit_slot 24, align = 8
    ss5 = explicit_slot 24, align = 8
    ss6 = explicit_slot 24, align = 8
    gv0 = symbol colocated userextname0
    gv1 = symbol colocated userextname1
    gv2 = symbol userextname3
    gv3 = symbol userextname6
    sig0 = () -> i64 ccall
    sig1 = (i64, i64, i64, i64, i32, i32) -> i32 ccall
    sig2 = (i64, i64, i64, i64, i32, i32) ccall
    sig3 = () -> i32 ccall
    sig4 = (i64) ccall
    sig5 = (i64) ccall
    sig6 = (i64, i64, i64, i64, i64, i64, i32, i32, i32, i64) ccall
    sig7 = (i32, i64, i64, i64, i64, i64, i32, i32) ccall
    sig8 = (i32) ccall
    sig9 = (i64, i64, i8 uext, i64) ccall
    sig10 = (i64, i64, i64) -> i32 ccall
    sig11 = (i64) ccall
    sig12 = () ccall
    fn0 = colocated u0:1 sig0
    fn1 = colocated u0:2 sig1
    fn2 = colocated u0:3 sig2
    fn3 = colocated u0:4 sig3
    fn4 = colocated u0:5 sig4
    fn5 = colocated u0:6 sig5
    fn6 = colocated u0:7 sig6
    fn7 = colocated u0:8 sig7
    fn8 = colocated u0:9 sig8
    fn9 = colocated u0:10 sig9
    fn10 = colocated u0:11 sig10
    fn11 = colocated u0:12 sig11
    fn12 = colocated u0:13 sig12

block0(v0: i64):
    v1 = symbol_value.i64 gv0
    v2 = symbol_value.i64 gv1
    v3 = iconst.i64 2
    v4 = iconst.i64 2
    v5 = iadd v1, v4  ; v4 = 2
    v6 = iconst.i64 6
    v7 = iconst.i32 0
    v8 = call fn0()
    v9 = symbol_value.i64 gv2
    v10 = load.i16 notrap aligned v9
    v11 = iconst.i16 512
    v12 = band v10, v11  ; v11 = 512
    brif v12, block2, block3

block2 cold:
    v13 = call fn1(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    brif v13, block1, block5

block5:
    jump block4

block3:
    v14 = load.i64 notrap aligned v8
    v15 = load.i64 notrap aligned v8+16
    v16 = icmp eq v14, v15
    brif v16, block6, block7

block6 cold:
    call fn2(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    jump block8

block7:
    store.i64 notrap aligned v1, v14
    store.i64 notrap aligned v3, v14+8  ; v3 = 2
    store.i64 notrap aligned v5, v14+16
    store.i64 notrap aligned v6, v14+24  ; v6 = 6
    store.i32 notrap aligned v7, v14+32  ; v7 = 0
    store.i32 notrap aligned v7, v14+36  ; v7 = 0
    v17 = load.i64 notrap aligned v8+24
    v18 = load.i64 notrap aligned v8+32
    v19 = isub v17, v18
    v20 = iconst.i64 24
    v21 = udiv v19, v20  ; v20 = 24
    v22 = ireduce.i32 v21
    store notrap aligned v22, v14+40
    v23 = iconst.i64 48
    v24 = iadd.i64 v14, v23  ; v23 = 48
    store notrap aligned v24, v8
    jump block8

block8:
    v25 = symbol_value.i64 gv3
    v26 = load.i32 notrap aligned v25
    brif v26, block9, block10

block9 cold:
    v27 = call fn3()
    brif v27, block1, block10

block10:
    jump block4

block4:
    v28 = stack_addr.i64 ss0
    call fn4(v28)
    call fn5(v28)
    v29 = stack_addr.i64 ss1
    v30 = iconst.i64 0
    v31 = stack_addr.i64 ss2
    v32 = iconst.i64 2
    v33 = iadd.i64 v1, v32  ; v32 = 2
    v34 = iconst.i64 6
    v35 = iconst.i32 0
    v36 = iconst.i32 0
    v37 = iconst.i32 -1
    v38 = stack_addr.i64 ss3
    call fn6(v28, v29, v31, v30, v33, v34, v35, v36, v37, v38)  ; v30 = 0, v34 = 6, v35 = 0, v36 = 0, v37 = -1
    v39 = stack_addr.i64 ss3
    v40 = load.i8 notrap aligned v39
    v41 = iconst.i8 16
    v42 = icmp uge v40, v41  ; v41 = 16
    brif v42, block11, block12

block11:
    call fn5(v39)
    jump block12

block12:
    v43 = iconst.i64 8
    v44 = iadd.i64 v1, v43  ; v43 = 8
    v45 = iconst.i64 16
    v46 = iconst.i64 2
    v47 = iadd.i64 v1, v46  ; v46 = 2
    v48 = iconst.i64 6
    v49 = iconst.i32 0
    v50 = iconst.i32 0
    v51 = iconst.i32 0
    call fn7(v49, v44, v45, v39, v47, v48, v50, v51)  ; v49 = 0, v45 = 16, v48 = 6, v50 = 0, v51 = 0
    v52 = load.i64 notrap aligned v8+24
    v53 = load.i64 notrap aligned v8+32
    v54 = isub v52, v53
    v55 = iconst.i64 24
    v56 = udiv v54, v55  ; v55 = 24
    v57 = iconst.i32 1
    v58 = symbol_value.i64 gv2
    v59 = load.i16 notrap aligned v58
    v60 = iconst.i16 512
    v61 = band v59, v60  ; v60 = 512
    brif v61, block13, block14

block13 cold:
    call fn8(v57)  ; v57 = 1
    jump block15

block14:
    v62 = load.i64 notrap aligned v8
    v63 = load.i64 notrap aligned v8+8
    v64 = icmp eq v62, v63
    brif v64, block15, block16

block16:
    store.i32 notrap aligned v57, v62-16  ; v57 = 1
    jump block15

block15:
    v65 = stack_addr.i64 ss5
    v66 = iconst.i64 24
    v67 = iadd.i64 v1, v66  ; v66 = 24
    v68 = iconst.i64 13
    v69 = iconst.i8 1
    call fn9(v67, v68, v69, v65)  ; v68 = 13, v69 = 1
    v70 = stack_addr.i64 ss5
    call fn5(v70)
    v71 = stack_addr.i64 ss4
    v72 = stack_addr.i64 ss5
    v73 = load.i64 notrap aligned v72
    store notrap aligned v73, v71
    v74 = load.i64 notrap aligned v72+8
    store notrap aligned v74, v71+8
    v75 = load.i64 notrap aligned v72+16
    store notrap aligned v75, v71+16
    v76 = stack_addr.i64 ss4
    v77 = iconst.i64 1
    v78 = stack_addr.i64 ss6
    v79 = call fn10(v76, v77, v78)  ; v77 = 1
    brif v79, block1, block17

block17:
    v80 = load.i64 notrap aligned v8+24
    v81 = load.i64 notrap aligned v8+32
    v82 = isub v80, v81
    v83 = iconst.i64 24
    v84 = udiv v82, v83  ; v83 = 24
    v85 = icmp ugt v84, v56
    brif v85, block18, block19

block18 cold:
    call fn11(v56)
    jump block19

block19:
    v87 = iconst.i64 0
    store notrap aligned v87, v0  ; v87 = 0
    store notrap aligned v87, v0+8  ; v87 = 0
    store notrap aligned v87, v0+16  ; v87 = 0
    v88 = iconst.i32 0
    jump block20(v88)  ; v88 = 0

block1:
    v89 = iconst.i32 1
    jump block20(v89)  ; v89 = 1

block20(v86: i32):
    v90 = symbol_value.i64 gv2
    v91 = load.i16 notrap aligned v90
    v92 = iconst.i16 512
    v93 = band v91, v92  ; v92 = 512
    brif v93, block21, block22

block21 cold:
    call fn12()
    jump block23

block22:
    v94 = load.i64 notrap aligned v8
    v95 = load.i64 notrap aligned v8+8
    v96 = icmp eq v94, v95
    brif v96, block23, block24

block24:
    v97 = iconst.i64 -48
    v98 = iadd.i64 v94, v97  ; v97 = -48
    store notrap aligned v98, v8
    v99 = load.i32 notrap aligned v98+40
    v100 = iconst.i32 -1
    v101 = icmp eq v99, v100  ; v100 = -1
    brif v101, block23, block25

block25:
    v102 = load.i64 notrap aligned v8+24
    v103 = load.i64 notrap aligned v8+32
    v104 = isub v102, v103
    v105 = iconst.i64 24
    v106 = udiv v104, v105  ; v105 = 24
    v107 = uextend.i64 v99
    v108 = icmp ugt v106, v107
    brif v108, block26, block23

block26 cold:
    call fn11(v107)
    jump block23

block23:
    return v86
}

;; main
function u0:1(i32, i64) -> i32 ccall {
    gv0 = symbol colocated userextname1
    sig0 = (i32, i64, i64) -> i32 ccall
    fn0 = u0:15 sig0

block0(v0: i32, v1: i64):
    v2 = symbol_value.i64 gv0
    v3 = call fn0(v0, v1, v2)
    return v3
}
