crates/zeo/tests/checks/snapshots/checks__clif__clif_snapshot_safe_navigation.snap
---
source: crates/zeo/tests/clif.rs
expression: "clif_of(\"x = ARGV[0]\\np x&.length\\n\")"
---
;; zeo_toplevel
function u0:0(i64) -> i32 ccall {
    ss0 = explicit_slot 24, align = 8
    ss1 = explicit_slot 24, align = 8
    ss2 = explicit_slot 0, align = 8
    ss3 = explicit_slot 8, align = 8
    ss4 = explicit_slot 24, align = 8
    ss5 = explicit_slot 24, align = 8
    ss6 = explicit_slot 24, align = 8
    ss7 = explicit_slot 24, align = 8
    ss8 = explicit_slot 24, align = 8
    ss9 = explicit_slot 24, align = 8
    gv0 = symbol colocated userextname0
    gv1 = symbol colocated userextname1
    gv2 = symbol userextname3
    gv3 = symbol userextname6
    gv4 = symbol colocated userextname13
    gv5 = symbol colocated userextname17
    gv6 = symbol colocated userextname17
    gv7 = symbol colocated userextname17
    sig0 = () -> i64 ccall
    sig1 = (i64, i64, i64, i64, i32, i32) -> i32 ccall
    sig2 = (i64, i64, i64, i64, i32, i32) ccall
    sig3 = () -> i32 ccall
    sig4 = (i64) ccall
    sig5 = (i64) ccall
    sig6 = (i64, i64, i64, i64, i64, i64, i32, i32, i32, i64) ccall
    sig7 = (i32, i64, i64, i64, i64, i64, i32) ccall
    sig8 = (i32) ccall
    sig9 = (i64, i64, i64, i64, i64, i64, i64, i8 uext, i64) -> i32 ccall
    sig10 = (i32, i32) -> i8 ccall
    sig11 = (i64, i64, i64) ccall
    sig12 = (i64, i32, i64, i32, i64, i64, i64, i64) -> i32 ccall
    sig13 = (i64) ccall
    sig14 = (i64) ccall
    sig15 = () ccall
    fn0 = colocated u0:1 sig0
    fn1 = colocated u0:2 sig1
    fn2 = colocated u0:3 sig2
    fn3 = colocated u0:4 sig3
    fn4 = colocated u0:5 sig4
    fn5 = colocated u0:6 sig5
    fn6 = colocated u0:7 sig6
    fn7 = colocated u0:8 sig7
    fn8 = colocated u0:9 sig8
    fn9 = colocated u0:10 sig9
    fn10 = colocated u0:11 sig10
    fn11 = colocated u0:12 sig11
    fn12 = colocated u0:13 sig12
    fn13 = colocated u0:14 sig13
    fn14 = colocated u0:15 sig14
    fn15 = colocated u0:16 sig15

block0(v0: i64):
    v212 = iconst.i64 0
    v213 = stack_addr.i64 ss0
    store notrap aligned v212, v213  ; v212 = 0
    store notrap aligned v212, v213+8  ; v212 = 0
    store notrap aligned v212, v213+16  ; v212 = 0
    v1 = symbol_value.i64 gv0
    v2 = symbol_value.i64 gv1
    v3 = iconst.i64 2
    v4 = iconst.i64 2
    v5 = iadd v1, v4  ; v4 = 2
    v6 = iconst.i64 6
    v7 = iconst.i32 0
    v8 = call fn0()
    v9 = symbol_value.i64 gv2
    v10 = load.i16 notrap aligned v9
    v11 = iconst.i16 512
    v12 = band v10, v11  ; v11 = 512
    brif v12, block2, block3

block2 cold:
    v13 = call fn1(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    brif v13, block1, block5

block5:
    jump block4

block3:
    v14 = load.i64 notrap aligned v8
    v15 = load.i64 notrap aligned v8+16
    v16 = icmp eq v14, v15
    brif v16, block6, block7

block6 cold:
    call fn2(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    jump block8

block7:
    store.i64 notrap aligned v1, v14
    store.i64 notrap aligned v3, v14+8  ; v3 = 2
    store.i64 notrap aligned v5, v14+16
    store.i64 notrap aligned v6, v14+24  ; v6 = 6
    store.i32 notrap aligned v7, v14+32  ; v7 = 0
    store.i32 notrap aligned v7, v14+36  ; v7 = 0
    v17 = load.i64 notrap aligned v8+24
    v18 = load.i64 notrap aligned v8+32
    v19 = isub v17, v18
    v20 = iconst.i64 24
    v21 = udiv v19, v20  ; v20 = 24
    v22 = ireduce.i32 v21
    store notrap aligned v22, v14+40
    v23 = iconst.i64 48
    v24 = iadd.i64 v14, v23  ; v23 = 48
    store notrap aligned v24, v8
    jump block8

block8:
    v25 = symbol_value.i64 gv3
    v26 = load.i32 notrap aligned v25
    brif v26, block9, block10

block9 cold:
    v27 = call fn3()
    brif v27, block1, block10

block10:
    jump block4

block4:
    v28 = stack_addr.i64 ss1
    call fn4(v28)
    call fn5(v28)
    v29 = stack_addr.i64 ss2
    v30 = iconst.i64 0
    v31 = stack_addr.i64 ss3
    v32 = iconst.i64 2
    v33 = iadd.i64 v1, v32  ; v32 = 2
    v34 = iconst.i64 6
    v35 = iconst.i32 0
    v36 = iconst.i32 0
    v37 = iconst.i32 -1
    v38 = stack_addr.i64 ss4
    call fn6(v28, v29, v31, v30, v33, v34, v35, v36, v37, v38)  ; v30 = 0, v34 = 6, v35 = 0, v36 = 0, v37 = -1
    v39 = stack_addr.i64 ss4
    v40 = load.i8 notrap aligned v39
    v41 = iconst.i8 16
    v42 = icmp uge v40, v41  ; v41 = 16
    brif v42, block11, block12

block11:
    call fn5(v39)
    jump block12

block12:
    v43 = iconst.i64 8
    v44 = iadd.i64 v1, v43  ; v43 = 8
    v45 = iconst.i64 16
    v46 = iconst.i64 2
    v47 = iadd.i64 v1, v46  ; v46 = 2
    v48 = iconst.i64 6
    v49 = iconst.i32 0
    v50 = iconst.i32 0
    call fn7(v49, v44, v45, v39, v47, v48, v50)  ; v49 = 0, v45 = 16, v48 = 6, v50 = 0
    v51 = load.i64 notrap aligned v8+24
    v52 = load.i64 notrap aligned v8+32
    v53 = isub v51, v52
    v54 = iconst.i64 24
    v55 = udiv v53, v54  ; v54 = 24
    v56 = iconst.i32 1
    v57 = symbol_value.i64 gv2
    v58 = load.i16 notrap aligned v57
    v59 = iconst.i16 512
    v60 = band v58, v59  ; v59 = 512
    brif v60, block13, block14

block13 cold:
    call fn8(v56)  ; v56 = 1
    jump block15

block14:
    v61 = load.i64 notrap aligned v8
    v62 = load.i64 notrap aligned v8+8
    v63 = icmp eq v61, v62
    brif v63, block15, block16

block16:
    store.i32 notrap aligned v56, v61-16  ; v56 = 1
    jump block15

block15:
    v64 = iconst.i64 24
    v65 = iadd.i64 v1, v64  ; v64 = 24
    v66 = iconst.i64 1
    v67 = iconst.i64 28
    v68 = iadd.i64 v1, v67  ; v67 = 28
    v69 = iconst.i64 4
    v70 = iconst.i64 28
    v71 = iadd.i64 v1, v70  ; v70 = 28
    v72 = iconst.i64 4
    v73 = iconst.i8 0
    v74 = stack_addr.i64 ss5
    v75 = symbol_value.i64 gv4
    v76 = call fn9(v75, v65, v66, v68, v69, v71, v72, v73, v74)  ; v66 = 1, v69 = 4, v72 = 4, v73 = 0
    brif v76, block1, block17

block17:
    v77 = stack_addr.i64 ss5
    v78 = load.i8 notrap aligned v77
    v79 = iconst.i8 16
    v80 = icmp uge v78, v79  ; v79 = 16
    brif v80, block18, block19

block18:
    call fn5(v77)
    jump block19

block19:
    v81 = iconst.i64 0
    v82 = stack_addr.i64 ss6
    v83 = iconst.i8 2
    store notrap aligned v83, v82  ; v83 = 2
    store notrap aligned v81, v82+8  ; v81 = 0
    v84 = stack_addr.i64 ss6
    v85 = stack_addr.i64 ss7
    v86 = load.i8 notrap aligned v77
    v87 = iconst.i8 20
    v88 = icmp eq v86, v87  ; v87 = 20
    brif v88, block20, block24

block20:
    v89 = load.i8 notrap aligned v84
    v90 = iconst.i8 2
    v91 = icmp eq v89, v90  ; v90 = 2
    brif v91, block21, block24

block21:
    v92 = symbol_value.i64 gv2
    v93 = load.i16 notrap aligned v92
    brif v93, block22, block23

block22:
    v94 = iconst.i32 0
    v95 = iconst.i32 5
    v96 = call fn10(v94, v95)  ; v94 = 0, v95 = 5
    brif v96, block23, block24

block23:
    v97 = load.i64 notrap aligned v84+8
    call fn11(v77, v97, v85)
    jump block25

block24:
    v98 = load.i32 notrap aligned v2
    v99 = iconst.i32 0
    v100 = iconst.i64 1
    v101 = iconst.i64 0
    v102 = stack_addr.i64 ss8
    v103 = symbol_value.i64 gv5
    v104 = call fn12(v103, v99, v77, v98, v84, v100, v101, v102)  ; v99 = 0, v100 = 1, v101 = 0
    brif v104, block1, block26

block26:
    v105 = stack_addr.i64 ss8
    v106 = load.i64 notrap aligned v105
    store notrap aligned v106, v85
    v107 = load.i64 notrap aligned v105+8
    store notrap aligned v107, v85+8
    v108 = load.i64 notrap aligned v105+16
    store notrap aligned v108, v85+16
    jump block25

block25:
    v109 = stack_addr.i64 ss0
    v110 = load.i8 notrap aligned v109
    v111 = iconst.i8 16
    v112 = icmp uge v110, v111  ; v111 = 16
    brif v112, block27, block28

block27:
    call fn13(v109)
    jump block28

block28:
    v113 = stack_addr.i64 ss7
    v114 = load.i64 notrap aligned v113
    store notrap aligned v114, v109
    v115 = load.i64 notrap aligned v113+8
    store notrap aligned v115, v109+8
    v116 = load.i64 notrap aligned v113+16
    store notrap aligned v116, v109+16
    v117 = load.i64 notrap aligned v8+24
    v118 = load.i64 notrap aligned v8+32
    v119 = isub v117, v118
    v120 = iconst.i64 24
    v121 = udiv v119, v120  ; v120 = 24
    v122 = icmp ugt v121, v55
    brif v122, block29, block30

block29 cold:
    call fn14(v55)
    jump block30

block30:
    v123 = load.i64 notrap aligned v8+24
    v124 = load.i64 notrap aligned v8+32
    v125 = isub v123, v124
    v126 = iconst.i64 24
    v127 = udiv v125, v126  ; v126 = 24
    v128 = iconst.i32 2
    v129 = symbol_value.i64 gv2
    v130 = load.i16 notrap aligned v129
    v131 = iconst.i16 512
    v132 = band v130, v131  ; v131 = 512
    brif v132, block31, block32

block31 cold:
    call fn8(v128)  ; v128 = 2
    jump block33

block32:
    v133 = load.i64 notrap aligned v8
    v134 = load.i64 notrap aligned v8+8
    v135 = icmp eq v133, v134
    brif v135, block33, block34

block34:
    store.i32 notrap aligned v128, v133-16  ; v128 = 2
    jump block33

block33:
    v136 = stack_addr.i64 ss0
    v137 = stack_addr.i64 ss8
    v138 = load.i8 notrap aligned v136
    v139 = iconst.i8 0
    v140 = icmp eq v138, v139  ; v139 = 0
    brif v140, block35, block36

block35:
    v141 = iconst.i64 0
    store notrap aligned v141, v137  ; v141 = 0
    store notrap aligned v141, v137+8  ; v141 = 0
    store notrap aligned v141, v137+16  ; v141 = 0
    jump block37

block36:
    v142 = iconst.i64 0
    v143 = load.i32 notrap aligned v2+4
    v144 = iconst.i32 0
    v145 = iconst.i64 0
    v146 = iconst.i64 0
    v147 = stack_addr.i64 ss7
    v148 = symbol_value.i64 gv6
    v149 = iconst.i64 56
    v150 = iadd v148, v149  ; v149 = 56
    v151 = call fn12(v150, v144, v136, v143, v142, v145, v146, v147)  ; v144 = 0, v142 = 0, v145 = 0, v146 = 0
    brif v151, block1, block38

block38:
    v152 = stack_addr.i64 ss7
    v153 = load.i64 notrap aligned v152
    store notrap aligned v153, v137
    v154 = load.i64 notrap aligned v152+8
    store notrap aligned v154, v137+8
    v155 = load.i64 notrap aligned v152+16
    store notrap aligned v155, v137+16
    jump block37

block37:
    v156 = stack_addr.i64 ss8
    v157 = load.i8 notrap aligned v156
    v158 = iconst.i8 16
    v159 = icmp uge v157, v158  ; v158 = 16
    brif v159, block39, block40

block39:
    call fn5(v156)
    jump block40

block40:
    v160 = stack_addr.i64 ss9
    v161 = stack_addr.i64 ss8
    v162 = load.i64 notrap aligned v161
    store notrap aligned v162, v160
    v163 = load.i64 notrap aligned v161+8
    store notrap aligned v163, v160+8
    v164 = load.i64 notrap aligned v161+16
    store notrap aligned v164, v160+16
    v165 = stack_addr.i64 ss9
    v166 = load.i32 notrap aligned v2+8
    v167 = iconst.i32 0
    v168 = iconst.i64 1
    v169 = iconst.i64 0
    v170 = stack_addr.i64 ss5
    v171 = symbol_value.i64 gv7
    v172 = iconst.i64 112
    v173 = iadd v171, v172  ; v172 = 112
    v174 = call fn12(v173, v167, v28, v166, v165, v168, v169, v170)  ; v167 = 0, v168 = 1, v169 = 0
    brif v174, block1, block41

block41:
    v175 = stack_addr.i64 ss5
    v176 = load.i8 notrap aligned v175
    v177 = iconst.i8 16
    v178 = icmp uge v176, v177  ; v177 = 16
    brif v178, block42, block43

block42:
    call fn5(v175)
    jump block43

block43:
    v179 = load.i64 notrap aligned v8+24
    v180 = load.i64 notrap aligned v8+32
    v181 = isub v179, v180
    v182 = iconst.i64 24
    v183 = udiv v181, v182  ; v182 = 24
    v184 = icmp ugt v183, v127
    brif v184, block44, block45

block44 cold:
    call fn14(v127)
    jump block45

block45:
    v186 = iconst.i64 0
    store notrap aligned v186, v0  ; v186 = 0
    store notrap aligned v186, v0+8  ; v186 = 0
    store notrap aligned v186, v0+16  ; v186 = 0
    v187 = iconst.i32 0
    jump block46(v187)  ; v187 = 0

block1:
    v188 = iconst.i32 1
    jump block46(v188)  ; v188 = 1

block46(v185: i32):
    v189 = stack_addr.i64 ss0
    v190 = load.i8 notrap aligned v189
    v191 = iconst.i8 16
    v192 = icmp uge v190, v191  ; v191 = 16
    brif v192, block47, block48

block47:
    call fn13(v189)
    jump block48

block48:
    v193 = symbol_value.i64 gv2
    v194 = load.i16 notrap aligned v193
    v195 = iconst.i16 512
    v196 = band v194, v195  ; v195 = 512
    brif v196, block49, block50

block49 cold:
    call fn15()
    jump block51

block50:
    v197 = load.i64 notrap aligned v8
    v198 = load.i64 notrap aligned v8+8
    v199 = icmp eq v197, v198
    brif v199, block51, block52

block52:
    v200 = iconst.i64 -48
    v201 = iadd.i64 v197, v200  ; v200 = -48
    store notrap aligned v201, v8
    v202 = load.i32 notrap aligned v201+40
    v203 = iconst.i32 -1
    v204 = icmp eq v202, v203  ; v203 = -1
    brif v204, block51, block53

block53:
    v205 = load.i64 notrap aligned v8+24
    v206 = load.i64 notrap aligned v8+32
    v207 = isub v205, v206
    v208 = iconst.i64 24
    v209 = udiv v207, v208  ; v208 = 24
    v210 = uextend.i64 v202
    v211 = icmp ugt v209, v210
    brif v211, block54, block51

block54 cold:
    call fn14(v210)
    jump block51

block51:
    return v185
}

;; zeo_unit_init
function u0:2() ccall {
    gv0 = symbol colocated userextname2
    gv1 = symbol colocated userextname3
    gv2 = symbol colocated userextname4
    gv3 = symbol colocated userextname5
    gv4 = symbol colocated userextname6
    gv5 = symbol colocated userextname8
    gv6 = symbol colocated userextname10
    gv7 = symbol colocated userextname12
    sig0 = (i64, i64, i64) ccall
    sig1 = (i64, i64, i64) ccall
    sig2 = (i64, i64) ccall
    sig3 = (i64, i64) ccall
    sig4 = (i64, i64) ccall
    sig5 = (i64, i64) ccall
    fn0 = u0:18 sig0
    fn1 = u0:19 sig1
    fn2 = u0:20 sig2
    fn3 = u0:21 sig3
    fn4 = u0:22 sig4
    fn5 = u0:23 sig5

block0:
    v0 = symbol_value.i64 gv0
    v1 = iconst.i64 3
    v2 = symbol_value.i64 gv2
    call fn0(v0, v1, v2)  ; v1 = 3
    v3 = symbol_value.i64 gv3
    v4 = symbol_value.i64 gv1
    v5 = iconst.i64 3
    call fn1(v3, v4, v5)  ; v5 = 3
    v6 = symbol_value.i64 gv5
    v7 = iconst.i64 1
    call fn3(v6, v7)  ; v7 = 1
    return
}

;; main
function u0:1(i32, i64) -> i32 ccall {
    gv0 = symbol colocated userextname1
    sig0 = (i32, i64, i64) -> i32 ccall
    fn0 = u0:25 sig0

block0(v0: i32, v1: i64):
    v2 = symbol_value.i64 gv0
    v3 = call fn0(v0, v1, v2)
    return v3
}
